--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
+<!DOCTYPE html>
 <html>
-<title>
-UGC WEB
-</title>
-  <p>
-    UGC<br> START
+<head>
+  <title>
+    Franco | Starts
+  </title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/x-icon" href="https://city-png.b-cdn.net/preview/preview_public/uploads/preview/hd-fc-barcelona-professional-football-club-transparent-png-7017517122490274yp2aduyob.png">
+</head>
+<body class="body">
+<h1 class="hw">
+  Franco Ayuzo
+</h1>
+<hr>
+<h2 class="h2">
+  HTML STARTS
+</h2>
+  <h3 class="p1">
+    "FIRST CODES"
+  </h3>
+  <h4 class="p2">
+    "FIRST CODES"
+  </h4>
+  <p class="link1">
+    <b><a href="https://skeldria.francodev.fun">SkeldriaX</a></b>
   </p>
-  <a href="/ucg.html">UGC.HTML</a>
+<hr>
+  <p class="barca">
+    <a href="https://fcbarcelona.com">
+    FCBARCELONA
+    </a>
+  </p>
+</body>
 </html>
