--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>
     Franco | Starts
   </title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/styles.css">
   <link rel="icon" type="image/x-icon" href="https://city-png.b-cdn.net/preview/preview_public/uploads/preview/hd-fc-barcelona-professional-football-club-transparent-png-7017517122490274yp2aduyob.png">
 </head>
 <body class="body">
