--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     "FIRST CODES"
   </h4>
   <p class="link1">
-    <b><a href="https://skeldria.francodev.fun">SkeldriaX</a></b>
+    <b><a href="https://skeldria.fvckyqnx.me">SkeldriaX</a></b>
   </p>
 <hr>
   <p class="barca">
